fix overflow

--- a/src/components/CovidDataList.component.css
+++ b/src/components/CovidDataList.component.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   overflow-x: hidden;
-}
+} */
 
 .covid-list-con {
   overflow-y: scroll;
